--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,13 @@ services:
     volumes:
       - mongodb_data:/data/db
 
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
   blog:
     platform: "linux/amd64"
     build:
@@ -17,7 +24,7 @@ services:
     working_dir: /app
     ports:
       - "3000:3000"
-    image: t3-app
+    image: blog-app
     depends_on:
       - mongodb
     environment:
@@ -27,3 +34,4 @@ services:
 
 volumes:
   mongodb_data:
+  redis_data:
