--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "next build",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:start": "docker-compose up mongodb redis",
+    "cache:start": "docker-compose up redis",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
