Updated Prisma schema with sample seed script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "db:push": "prisma db push",
+    "db:seed": "npx prisma db seed",
     "db:studio": "prisma studio",
     "db:start": "docker-compose up mongodb redis",
     "cache:start": "docker-compose up redis",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
+    "tsx": "^3.14.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
