--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,20 @@
-version: "3"
+version: "3.8"
 services:
-  mongodb:
-    image: mongo
+  # Replica Set (required for Prisma Client)
+  # https://stackoverflow.com/questions/76940883/nestjs-cant-connect-to-mongo-while-running-in-docker
+  mongo:
+    container_name: mongo
+    build:
+      dockerfile: mongo.Dockerfile
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: prisma
+      MONGO_REPLICA_HOST: 127.0.0.1
+      MONGO_REPLICA_PORT: 27018
+    env_file:
+      - .env
     ports:
-      - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
+      - "27018:27018"
 
   redis:
     image: redis
@@ -26,9 +35,10 @@ services:
       - "3000:3000"
     image: blog-app
     depends_on:
-      - mongodb
-    environment:
-      - DATABASE_URL=mongodb://mongodb:27017/blog
+      - mongo
+      - redis
+    # environment:
+    #   - DATABASE_URL=mongodb://mongodb:27018/blog
     env_file:
       - .env
 
