--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lint": "next lint",
     "start": "next start"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-slot": "^1.0.2",
