--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@trpc/server": "^10.37.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "ioredis": "^5.3.2",
     "lucide-react": "^0.290.0",
     "next": "^13.5.4",
+    "radash": "^11.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
@@ -37,7 +39,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^3.14.0",
     "usehooks-ts": "^2.9.1",
-    "zod": "^3.22.4"
+    "zod_utilz": "^0.7.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.2",
