--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "build": "next build",
     "db:push": "prisma db push",
-    "db:seed": "npx prisma db seed",
     "db:studio": "prisma studio",
     "db:start": "docker-compose up mongodb redis",
     "cache:start": "docker-compose up redis",
@@ -18,7 +17,9 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
@@ -36,9 +37,11 @@
     "radash": "^11.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.1",
     "tsx": "^3.14.0",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.22.4",
