--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "lucide-react": "^0.290.0",
     "nanoid": "^5.0.2",
     "next": "^13.5.4",
+    "next-superjson-plugin": "^0.5.9",
     "radash": "^11.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
-    "superjson": "^1.13.1",
+    "superjson": "^1.13.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.1",
