--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:start": "docker-compose up mongodb redis",
+    "db:start": "docker-compose up mongodb",
     "cache:start": "docker-compose up redis",
     "dev": "next dev",
     "postinstall": "prisma generate",
